--- a/payment_success.html
+++ b/payment_success.html
@@ -57,6 +57,6 @@
     <img src="https://github.com/DDMouse0407/payment-success-page/blob/main/9558AF9A-B8BA-411B-8747-80E34E8F19EB.png" alt="晴子醬封面圖">
   </div>
 
-  <a class="btn" href="https://line.me/R/ti/p/@yourlineid" target="_blank">點我前往 LINE 回報付款</a>
+  <a class="btn" href="https://line.me/R/ti/p/@604menww" target="_blank">點我前往 LINE 回報付款</a>
 </body>
 </html>
